--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
-  file_picker: ^2.0.7
+  file_picker: ^1.3.8
   flutter_secure_storage: ^3.3.5
   googleapis: ^0.56.1
   googleapis_auth: ^0.2.12
+  http: ^0.12.2
   path: ^1.7.0
   url_launcher: ^5.7.2
 
